Реализована базовая пользовательская подсистема: управление профилем, управление встречами, поиск коллег, управление уведомлениями
